web-infras/parser/tests/fixtures/esprima/es2020/import.meta/log/output.txt
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (1,13)
1|console.log(import.meta);
 |           ^
